--- a/app/src/main/res/layout/fragment_challenge.xml
+++ b/app/src/main/res/layout/fragment_challenge.xml
@@ -40,6 +40,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/challenge" />
             <TextView
+                android:id="@+id/tvChallengeRank"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@id/ivChallengePercentage"
