--- a/app/src/main/res/layout/listview_challenge.xml
+++ b/app/src/main/res/layout/listview_challenge.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="10dp"
+    android:layout_marginBottom="10dp"
     android:background="@drawable/btn_border_underline">
 
 
@@ -31,11 +32,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
         android:layout_marginBottom="3dp"
+        android:layout_marginStart="25dp"
         android:text="TextView"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tvChallengeIndex"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
