--- a/app/src/main/res/layout/layout_register.xml
+++ b/app/src/main/res/layout/layout_register.xml
@@ -4,21 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity">
+    tools:context=".ui.register.RegisterActivity">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/black"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        app:flow_horizontalAlign="center">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/emblema_one"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:text="WR"
+            android:textColor="@color/white"
+            android:textSize="30dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/layout_toolbar">
 
         <TextView
             android:id="@+id/tvRegisterTitle"
@@ -34,7 +57,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
             <EditText
                 android:id="@+id/etRegisterId"
                 android:layout_width="match_parent"
@@ -42,7 +64,6 @@
                 android:hint="아이디"
                 android:minHeight="48dp"
                 android:textColor="@color/black" />
-
             <EditText
                 android:id="@+id/etRegisterPw"
                 android:layout_width="match_parent"
@@ -66,6 +87,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="이름"
+                android:privateImeOptions="defaultInputmode=korean"
                 android:minHeight="48dp"
                 android:textColor="#000000" />
 
@@ -73,7 +95,7 @@
                 android:id="@+id/etRegisterSex"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="성별"
+                android:hint="성별(male or female)"
                 android:minHeight="48dp"
                 android:textColor="#000000" />
 
@@ -114,7 +136,8 @@
                     app:layout_constraintBottom_toBottomOf="@+id/etRegisterPhone"
                     app:layout_constraintEnd_toEndOf="@+id/etRegisterPhone"
                     app:layout_constraintTop_toTopOf="@+id/etRegisterPhone"
-                    tools:ignore="TouchTargetSizeCheck" />
+                    tools:ignore="TouchTargetSizeCheck"
+                    android:textColor="@color/white"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -147,7 +170,8 @@
                     app:layout_constraintEnd_toEndOf="@+id/etRegisterCode"
                     app:layout_constraintTop_toTopOf="@+id/etRegisterCode"
                     app:layout_constraintVertical_bias="1.0"
-                    tools:ignore="TouchTargetSizeCheck" />
+                    tools:ignore="TouchTargetSizeCheck"
+                    android:textColor="@color/white"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <Button
@@ -156,7 +180,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:background="@drawable/btn_radius_big"
-                android:text="회원가입" />
+                android:text="회원가입"
+                android:textColor="@color/white"/>
         </LinearLayout>
 
 
