--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.WR" parent='Theme.AppCompat.Light'>
+    <style name="Theme.WR" parent='Theme.AppCompat.Light.NoActionBar'>
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/black_20</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
