--- a/app/src/main/res/layout/elistview_record_item.xml
+++ b/app/src/main/res/layout/elistview_record_item.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".ui.record.RecordFragment">
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="40dp"
@@ -30,7 +30,7 @@
                 android:id="@+id/tvListViewItemRecordDistanceTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="50dp"
+                android:layout_marginBottom="15dp"
                 android:fontFamily="@font/rubik_one"
                 android:text="6.4km"
                 android:textColor="@color/black"
@@ -51,7 +51,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/emblema_one"
-                        android:paddingHorizontal="30dp"
+                        android:paddingHorizontal="15dp"
                         android:text="거리"
                         android:textColor="@color/black"
                         android:textSize="18sp" />
@@ -69,7 +69,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/emblema_one"
-                        android:paddingHorizontal="30dp"
+                        android:paddingHorizontal="15dp"
                         android:text="페이스"
                         android:textColor="@color/black"
                         android:textSize="18sp" />
@@ -93,7 +93,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/emblema_one"
-                        android:paddingHorizontal="30dp"
+                        android:paddingHorizontal="15dp"
                         android:text="시간"
                         android:textColor="@color/black"
                         android:textSize="18sp" />
@@ -111,7 +111,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/emblema_one"
-                        android:paddingHorizontal="30dp"
+                        android:paddingHorizontal="15dp"
                         android:text="케이던스"
                         android:textColor="@color/black"
                         android:textSize="18sp" />
@@ -129,14 +129,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="left"
-                    android:layout_marginVertical="15dp"
-                    android:paddingLeft="-7.5dp">
+                    android:layout_marginVertical="15dp">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/emblema_one"
-                        android:paddingHorizontal="30dp"
+                        android:paddingHorizontal="15dp"
                         android:text="걸음"
                         android:textColor="@color/black"
                         android:textSize="18sp" />
@@ -155,13 +154,15 @@
             </TableLayout>
 
         </LinearLayout>
+        <!--
         <fragment xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:map="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/map"
+            android:id="@+id/googleMap"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MapsActivity" />
+            -->
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
