--- a/app/src/main/res/layout/fragment_competition.xml
+++ b/app/src/main/res/layout/fragment_competition.xml
@@ -6,19 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".ui.competition.CompetitionFragment">
 
+    <Spinner
+        android:id="@+id/spinner_name"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
+        android:id="@+id/layout_competition"
+        android:background="@drawable/spinner_background"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/spinner_name">
 
         <LinearLayout
             android:layout_width="match_parent"
