--- a/app/src/main/res/layout/layout_login.xml
+++ b/app/src/main/res/layout/layout_login.xml
@@ -95,7 +95,7 @@
                     android:id="@+id/btnGoRegister"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@color/white"
+                    android:background="@android:color/transparent"
                     android:text="회원가입"
                     android:textSize="15sp"
                     android:layout_marginTop="10dp"
@@ -107,7 +107,7 @@
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@color/white"
+                    android:background="@android:color/transparent"
                     android:text="아이디 찾기"
                     android:textSize="15sp"
                     android:layout_marginTop="10dp"
@@ -119,7 +119,7 @@
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@color/white"
+                    android:background="@android:color/transparent"
                     android:text="비밀번호 찾기"
                     android:textSize="15sp"
                     android:layout_marginTop="10dp"
