[ENH] 로고 변경, 서버 ip 변경, 로그아웃 글자색 변경

--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -41,7 +41,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:background="@drawable/btn_radius_big"
+                android:textColor="@color/white"
                 android:text="로그아웃" />
+
         </LinearLayout>
 
 
