--- a/app/src/main/res/layout/fragment_competition.xml
+++ b/app/src/main/res/layout/fragment_competition.xml
@@ -5,181 +5,214 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.competition.CompetitionFragment">
+    <TextView
+        android:id="@+id/tvCompetitionMyName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/emblema_one"
+        android:text="엄유상"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tvCompetitionVS"
+        app:layout_constraintEnd_toStartOf="@+id/tvCompetitionVS" />
 
+    <TextView
+        android:id="@+id/tvCompetitionVS"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/emblema_one"
+        android:layout_marginTop="20dp"
+        android:paddingHorizontal="30dp"
+        android:text="VS"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        app:layout_constraintBaseline_toBaselineOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
     <Spinner
         android:id="@+id/spinner_name"
-        android:layout_width="100dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/tvCompetitionVS"
+        app:layout_constraintStart_toEndOf="@id/tvCompetitionVS"
+        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <LinearLayout
         android:id="@+id/layout_competition"
-        android:background="@drawable/spinner_background"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner_name">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_horizontal"
-            android:layout_marginBottom="30dp">
-            <TextView
-                android:id="@+id/tvCompetitionMyName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:fontFamily="@font/emblema_one"
-                android:text="엄유상"
-                android:textColor="@color/black"
-                android:textSize="24sp" />
-            <TextView
-                android:id="@+id/tvCompetitionVS"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:fontFamily="@font/emblema_one"
-                android:text="VS"
-                android:textColor="@color/black"
-                android:textSize="24sp"
-                android:paddingHorizontal="30dp"/>
-            <TextView
-                android:id="@+id/tvCompetitionFriendName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:fontFamily="@font/emblema_one"
-                android:text="김예빈"
-                android:textColor="@color/black"
-                android:textSize="24sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:gravity="center_horizontal">
+
             <TextView
                 android:id="@+id/tvCompetitionMyDistance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
                 android:fontFamily="@font/rubik_one"
                 android:text="6.4km"
                 android:textColor="@color/black"
-                android:textSize="24sp" />
+                android:textSize="24sp"
+                app:layout_constraintBaseline_toBaselineOf="@+id/tvCompetitionDistance"
+                app:layout_constraintEnd_toStartOf="@+id/tvCompetitionDistance" />
+
             <TextView
                 android:id="@+id/tvCompetitionDistance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="2dp"
                 android:fontFamily="@font/emblema_one"
+                android:paddingHorizontal="30dp"
                 android:text="거리"
                 android:textColor="@color/black"
                 android:textSize="18sp"
-                android:paddingHorizontal="30dp"/>
+                app:layout_constraintBaseline_toBaselineOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
             <TextView
                 android:id="@+id/tvCompetitionFriendDistance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
                 android:fontFamily="@font/rubik_one"
                 android:text="5.8km"
                 android:textColor="@color/black"
-                android:textSize="24sp" />
+                android:textSize="24sp"
+                app:layout_constraintBaseline_toBaselineOf="@+id/tvCompetitionDistance"
+                app:layout_constraintStart_toEndOf="@+id/tvCompetitionDistance" />
 
-        </LinearLayout>
-        <LinearLayout
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/linearLayout3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:gravity="center_horizontal">
+
             <TextView
                 android:id="@+id/tvCompetitionMyTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
                 android:fontFamily="@font/rubik_one"
                 android:text="40:41"
                 android:textColor="@color/black"
-                android:textSize="24sp" />
+                android:textSize="24sp"
+                app:layout_constraintBaseline_toBaselineOf="@+id/tvCompetitionTime"
+                app:layout_constraintEnd_toStartOf="@+id/tvCompetitionTime" />
+
             <TextView
                 android:id="@+id/tvCompetitionTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
+                android:layout_marginTop="10dp"
                 android:fontFamily="@font/emblema_one"
+                android:paddingHorizontal="30dp"
                 android:text="시간"
                 android:textColor="@color/black"
                 android:textSize="18sp"
-                android:paddingHorizontal="30dp"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
                 android:id="@+id/tvCompetitionFriendTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
                 android:fontFamily="@font/rubik_one"
                 android:text="40:41"
                 android:textColor="@color/black"
-                android:textSize="24sp" />
+                android:textSize="24sp"
+                app:layout_constraintBaseline_toBaselineOf="@+id/tvCompetitionTime"
+                app:layout_constraintStart_toEndOf="@+id/tvCompetitionTime" />
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:gravity="center_horizontal">
+
             <TextView
                 android:id="@+id/tvCompetitionMySteps"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
+                android:layout_marginStart="74dp"
+                android:layout_marginLeft="74dp"
                 android:fontFamily="@font/rubik_one"
                 android:text="20185"
                 android:textColor="@color/black"
-                android:textSize="24sp" />
+                android:textSize="24sp"
+                app:layout_constraintBaseline_toBaselineOf="@+id/tvCompetitionSteps"
+                app:layout_constraintEnd_toStartOf="@id/tvCompetitionSteps" />
+
             <TextView
                 android:id="@+id/tvCompetitionSteps"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
+                android:layout_marginTop="10dp"
                 android:fontFamily="@font/emblema_one"
+                android:paddingHorizontal="30dp"
                 android:text="걸음"
                 android:textColor="@color/black"
                 android:textSize="18sp"
-                android:paddingHorizontal="30dp"/>
+                app:layout_constraintBaseline_toBaselineOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
                 android:id="@+id/tvCompetitionFriendSteps"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
                 android:fontFamily="@font/rubik_one"
                 android:text="18262"
                 android:textColor="@color/black"
-                android:textSize="24sp" />
+                android:textSize="24sp"
+                app:layout_constraintBaseline_toBaselineOf="@+id/tvCompetitionSteps"
+                app:layout_constraintStart_toEndOf="@+id/tvCompetitionSteps" />
 
-        </LinearLayout>
-        <com.github.mikephil.charting.charts.LineChart
-            android:layout_height="300dp"
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
-            android:layout_marginTop="30dp"
-            android:id="@+id/chart"
-            tools:ignore="MissingClass" />
+            android:layout_height="wrap_content">
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/chart"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginRight="15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:ignore="MissingClass" />
+            <View
+                android:id="@+id/clickable"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginRight="15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
