--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.record.RecordFragment">
-
     <LinearLayout
         android:id="@+id/fragment_record"
         android:layout_width="0dp"
@@ -27,7 +26,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ExpandableListView
+            <ListView
                 android:id="@+id/elvRecordList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -35,7 +34,7 @@
                 android:divider="@android:color/transparent"
                 android:childDivider="@android:color/transparent">
 
-            </ExpandableListView>
+            </ListView>
         </LinearLayout>
 
 
