--- a/app/src/main/res/layout/fragment_running.xml
+++ b/app/src/main/res/layout/fragment_running.xml
@@ -17,7 +17,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:orientation="vertical"
@@ -42,7 +42,7 @@
                 android:text="00:00"
                 android:textAlignment="center"
                 android:textColor="@color/black"
-                android:textSize="60dp"
+                android:textSize="80sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -84,7 +84,7 @@
 
                 <TextView
                     android:id="@+id/distance_value"
-                    android:layout_width="100dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/rubik_one"
                     android:textColor="@color/black"
@@ -110,7 +110,7 @@
 
                 <TextView
                     android:id="@+id/steps_value"
-                    android:layout_width="100dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/rubik_one"
                     android:textColor="@color/black"
@@ -136,7 +136,7 @@
 
                 <TextView
                     android:id="@+id/pace_value"
-                    android:layout_width="100dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/rubik_one"
                     android:textColor="@color/black"
@@ -163,7 +163,7 @@
 
                 <Chronometer
                     android:id="@+id/time_value"
-                    android:layout_width="100dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/rubik_one"
                     android:gravity="left"
@@ -188,7 +188,7 @@
 
                 <TextView
                     android:id="@+id/cadence_value"
-                    android:layout_width="100dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
                     android:fontFamily="@font/rubik_one"
